# quantum-privacy-guard

./: CMakeLists.txt  LICENSE  README.md
include/: cli.h  crypto.h  qpg.h  qpg_crypto.h  qpg_utils.h  utils.h
src/: cli.c  crypto_kem.c  crypto_sig.c  encryption.c  file_io.c  main.c  qpg.c  qpg_crypto.c  qpg_utils.c  utils.c
tests/: CMakeLists.txt  test_qpg.c
